--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,14 +1,54 @@
 aniso8601==6.0.0
+Babel==2.8.0
+certifi==2020.6.20
+chardet==3.0.4
 Click==7.0
+debtcollector==2.2.0
+dnspython==1.16.0
+eventlet==0.27.0
+fasteners==0.15
 Flask==1.0.3
 Flask-Cors==3.0.7
 Flask-RESTful==0.3.7
 Flask-SQLAlchemy==2.4.0
+greenlet==0.4.16
+idna==2.10
+importlib-metadata==1.7.0
+importlib-resources==3.0.0
+iso8601==0.1.13
 itsdangerous==1.1.0
 Jinja2==2.10.1
 MarkupSafe==1.1.1
+monotonic==1.5
+msgpack==1.0.0
+netaddr==0.8.0
+netifaces==0.10.9
+os-win==5.1.0
+oslo.concurrency==4.3.0
+oslo.config==8.3.2
+oslo.context==3.1.1
+oslo.i18n==5.0.1
+oslo.log==4.4.0
+oslo.serialization==4.0.1
+oslo.utils==4.6.0
+packaging==20.4
+pbr==5.5.0
 psycopg2-binary==2.8.2
+pycodestyle==2.6.0
+PyMI==1.0.6
+pyparsing==2.4.7
+python-dateutil==2.8.1
+python-dotenv==0.14.0
 pytz==2019.1
+pywin32==228
+PyYAML==5.3.1
+requests==2.24.0
+rfc3986==1.4.0
 six==1.12.0
 SQLAlchemy==1.3.4
+stevedore==3.2.2
+urllib3==1.25.10
 Werkzeug==0.15.4
+WMI==1.5.1
+wrapt==1.12.1
+zipp==3.1.0
