--- a/backend/instance/.env
+++ b/backend/instance/.env
@@ -1,3 +1,3 @@
 SECRET_KEY = 'p8Bv<5Eid9%$i03'
-DATABASE_URI = "postgres+psycopg2://mahmoud:post_Mah@localhost:5432/trivia"
-DATABASE_URI_TEST = "postgres+psycopg2://mahmoud:post_Mah@localhost:5432/trivia_test"
+DATABASE_URI = "postgres+psycopg2://username:password@localhost:5432/trivia"
+DATABASE_URI_TEST = "postgres+psycopg2://username:password@localhost:5432/trivia_test"
